# parquet-linter

./: .gitignore  AGENTS.md  Cargo.toml  README.md  flake.nix  hits.parquet
.github/workflows/: ci.yml  release.yml
doc/: cardinality.md  leaderboard_server.md  parquet_files.txt
src/: cardinality.rs  diagnostic.rs  fix.rs  lib.rs  loader.rs  main.rs  metadata.rs  prescription.rs  rule.rs
src/parquet-linter/: Cargo.toml
src/parquet-linter-cli/: Cargo.toml
src/parquet-linter-cli/src/: main.rs
src/parquet-linter-leaderboard/: Cargo.toml
src/parquet-linter-leaderboard/src/: benchmark.rs  download.rs  main.rs  report.rs  server.rs
src/parquet-linter/src/: cardinality.rs  column_context.rs  diagnostic.rs  fix.rs  lib.rs  loader.rs  prescription.rs  rule.rs
src/parquet-linter/src/rules/: bloom_filter.rs  compression_codec.rs  dictionary_encoding.rs  float_encoding.rs  gpu_page_count.rs  mod.rs  page_statistics.rs  string_encoding.rs  timestamp_encoding.rs  vector_embedding.rs
src/rules/: bloom_filter.rs  compression_codec.rs  compression_ratio.rs  dictionary_encoding.rs  float_encoding.rs  mod.rs  page_size.rs  page_statistics.rs  sorted_integers.rs  string_statistics.rs  timestamp_encoding.rs  vector_embedding.rs
