[workspace]
members = ["src/parquet-linter", "src/parquet-linter-cli"]
default-members = ["src/parquet-linter-cli"]
resolver = "3"

[workspace.dependencies]
parquet-linter = { path = "src/parquet-linter" }
parquet = { version = "57.3.0", features = ["arrow", "async", "object_store"] }
arrow-array = "57"
arrow-schema = "57"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
async-trait = "0.1"
bytes = "1"
colored = "3"
object_store = { version = "0.12.5", features = ["aws", "http"] }
futures = "0.3"
tokio = { version = "1", features = ["rt", "macros"] }
url = "2"
tempfile = "3"
