[package]
name = "parquet-linter-leaderboard"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "parquet-leaderboard"
path = "src/main.rs"

[dependencies]
parquet-linter.workspace = true
parquet.workspace = true
arrow-schema.workspace = true
clap.workspace = true
anyhow.workspace = true
colored.workspace = true
object_store.workspace = true
futures.workspace = true
tokio.workspace = true
bytes.workspace = true
