[package]
name = "parquet-linter"
version = "0.1.0"
edition = "2024"
description = "Lint and optimize Parquet files for better performance"
license = "MIT"
repository = "https://github.com/xiangpenghao/parquet-linter"

[dependencies]
parquet.workspace = true
arrow-array.workspace = true
arrow-schema.workspace = true
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
colored.workspace = true
object_store.workspace = true
futures.workspace = true
tokio.workspace = true
url.workspace = true

[dev-dependencies]
tempfile.workspace = true
